# LB8.2.2

./: pyproject.toml
src/mycli/: __init__.py  main.py
